# Fastapi

first/: pyproject.toml
first/first/: main.py
first/tests/: test_main.py
second/poet/: pyproject.toml
third/: app.py  main.py
third/new/: main.py  model.py  services.py
todos/: aesy.py  database.py  main.py  main1.py  requirements.txt  streamlit_client.py
